--- a/roles/common/tasks/main.yml
+++ b/roles/common/tasks/main.yml
@@ -17,10 +17,6 @@
 #     - "~/.ssh/authorized_keys"
 #    tags:
 #     - keys
-  - name: Check for correct Ansible Version (>= 2.8)
-    assert:
-      that:
-        - "ansible_version.full is version('2.8', '>=')"
 
   - name: Install EPEL Repo
     yum: name={{ epel_rpm }} state=installed
@@ -28,22 +24,11 @@
     tags:
      - epelrepo
 
-  # Do not use the old public-yum.repo on OL7 after January 2019 anymore
-  # Check for /usr/bin/ol_yum_configure.sh in newer systems
-  - name: Check for ol_yum_configure.sh
-    stat:
-      path: /usr/bin/ol_yum_configure.sh
-    register: olyumconfigfile
-    when: configure_public_yum_repo and ansible_distribution == 'OracleLinux'
-    tags:
-      - olrepo
-
-  # Update public-yum.repo only on old versions of OL7
   - name: Get newest repo-file for OL (public-yum)
     get_url: dest={{ repo_dir}}/{{ ol_repo_file }}  url=http://public-yum.oracle.com/{{ ol_repo_file }} backup=yes
-    when: not olyumconfigfile.stat.exists | default(false) and configure_public_yum_repo and ansible_distribution == 'OracleLinux'
+    when: configure_public_yum_repo and ansible_distribution == 'OracleLinux'
     tags:
-     - olrepo
+     - ol6repo
 
   - name: Install common packages OL/RHEL
     yum: name={{ common_packages }} state=installed
@@ -52,13 +37,14 @@
       - commonpackages
 
   - name: Install common packages SLES12
-    zypper: name={{ common_packages_sles }} state=installed
+    zypper: name={{ item }} state=installed
+    with_items: "{{ common_packages_sles }}"
     when: install_os_packages and ansible_os_family == 'Suse'
     tags:
       - commonpackages
 
-  - name: Start and enable ntp or chrony
-    service: name={{ ntp_type }}d  state=started  enabled=yes
+  - name: Start and enable NTP
+    service: name=ntpd  state=started  enabled=yes
     when: configure_ntp
 
   - name: Add motd
