--- a/roles/orahost/tasks/main.yml
+++ b/roles/orahost/tasks/main.yml
@@ -5,25 +5,22 @@
     assert:
       that:
         - "ansible_os_family == '{{ os_family_supported }}'"
-        - "ansible_facts['distribution_version'] is version('{{ os_min_supported_version }}', '>=')"
+        - "ansible_distribution_version | version_compare('{{ os_min_supported_version }}', '>=')"
     tags:
      - oscheck
 
-  # OL8/RHEL8 has all needed RPMs in orahost role!
-  - name: Install packages required by Oracle on OL/RHEL version 6 and 7
+  - name: Install packages required by Oracle on OL/RHEL
     yum:
        name: "{{ oracle_packages }}"
        state: installed
        enablerepo: "{{ extrarepos_enabled |default (omit, True) }}"
        disablerepo: "{{ extrarepos_disabled |default (omit, True) }}"
-    when: 
-      - install_os_packages
-      - ansible_os_family == 'RedHat'
-      - "facter_os.release.major is version('7', '<=')"
+    when: install_os_packages and ansible_os_family == 'RedHat'
     tags: os_packages, oscheck
 
   - name: Install packages required by Oracle on SLES
-    zypper: name={{ oracle_packages_sles }} state=installed
+    zypper: name={{ item }} state=installed
+    with_items: "{{ oracle_packages_sles }}"
     when: install_os_packages and ansible_os_family == 'Suse'
     tags: os_packages, oscheck
 
@@ -37,7 +34,8 @@
     tags: os_packages, oscheck
 
   - name: Install packages required by Oracle for ASMlib on SLES
-    zypper: name={{ oracle_asm_packages_sles }} state=installed
+    zypper: name={{ item }} state=installed
+    with_items: "{{ oracle_asm_packages_sles }}"
     when: install_os_packages and device_persistence == 'asmlib' and ansible_os_family == 'Suse' and asm_diskgroups is defined
     tags: os_packages, oscheck, asm1
 
@@ -66,25 +64,6 @@
     failed_when: disable_selinux_runtime.rc > 0 and "SELinux is disabled" not in disable_selinux_runtime.stderr
     register: disable_selinux_runtime
     tags: selinux
-
-  - block:
-    - name: Set Timezone
-      timezone:
-        name: "{{ os_timezone }}"
-        hwclock: "{{ os_hwclock | default(omit) }}"
-      register: timezoneresult
-      tags: timezone
-
-    - name: Restart crond after timezone change
-      service:
-        name: crond
-        state: restarted
-      when: 
-        - timezoneresult is defined
-        - timezoneresult.changed
-      tags: timezone
-
-    when: os_timezone is defined
 
   - name: Check dns for host
     command: host {{ ansible_hostname }}
@@ -279,28 +258,8 @@
   - name: Oracle hugepages
     sysctl: name={{ item.name }} value="{{ item.value }}" state=present reload=yes ignoreerrors=yes
     with_items: "{{oracle_hugepages}}"
-    register: systclcmd
     tags: sysctl,hugepages
 
-  # There is no safe way to allocate Hugepages in a running system.
-  # => A reboot should be done after changing the configuration
-  # => we won't reboot during installation
-  # Work Arroud:
-  # => Flush File Cache
-  # => retry a sysctl -p
-  - block:
-    - name: Flush Buffer Cache when hugepages have been changed
-      command: echo 2 > /proc/sys/vm/drop_caches
-      tags: sysctl,hugepages
-
-    - name: Try sysctl again
-      sysctl: name={{ item.name }} value="{{ item.value }}" state=present reload=yes
-      with_items: "{{oracle_hugepages}}"
-      tags: sysctl,hugepages
-    when:
-      - systclcmd is defined
-      - systclcmd.changed
-    tags: sysctl,hugepages
 
   - name: Oracle-recommended PAM config
     lineinfile: dest=/etc/pam.d/login state=present line="session required pam_limits.so"
